Organisatoren-Teil ergänzt - mit Fotos, Favicon hinzugefügt.

--- a/index.html
+++ b/index.html
@@ -137,25 +137,38 @@
 				</div>
 			</div>
 		</section>
-
-		<!--
-		<section class="know-about-us">
+		<section class="organizers">
 			<div class="center clearfix">
-				<img src="images/idea-thought.png" alt="">
-				<div class="text">
-					<h2>ORGANISATOREN</h2>
-					<p>Das barcamp.ruhr 2015 wird veranstaltet von</p> 
-					<ul>
-						<li><strong>Berthold Barth</strong><br />
-						Email, Twitter, Facebook, Xing, LinkedIn
-						</li>
-						<li><strong>Maik Wagner</strong><br />
-						Email, Twitter, Facebook, Xing, LinkedIn
-					</ul>
+				<div class="clearfix">
+					<div class="text">
+						<h2>ORGANISATOREN</h2>
+						<p>Das barcamp.ruhr 8 wird veranstaltet von</p> 
+					</div>
 				</div>
-			</div>
+				<div class="orgainfo clearfix">
+					<img src="images/berthold.png" alt="" >
+					<div class="text">
+						<p>
+							<strong>Berthold Barth</strong><br />
+							Berthold arbeitet seit über 10 Jahren mit Teams und Projekten. Vor einigen Jahren entdeckte er Agile Methoden für sich und vermittelt diese um Teams und Organisationen dabei zu unterstützen Projekte erfolgreich abzuschließen.
+						</p>
+						<p>
+							<a href="https://twitter.com/bertholdb">Twitter</a>, <a href="https://www.facebook.com/berthold.barth">Facebook</a>, <a href="https://www.xing.com/profile/Berthold_Barth">Xing</a>, <a href="http://de.linkedin.com/pub/berthold-barth/56/a14/b91/de">LinkedIn</a>
+						</p>	
+					</div>
+				</div>
+				<div class="orgainfo clearfix">
+					<img src="images/maik.png" alt="" >	
+ 					<div class="text">
+						<p>
+							<strong>Maik Wagner</strong><br />
+							lebt und arbeitet in Essen. 1999 gründete er die mcwiwa consulting, die bis heute interaktive, barrierefreie und webstandardkonforme Websites entwickelt. Er kümmert sich, mal lokal, mal überregional um die Verbreitung von Webstandards und Barrierefreiheit.
+						</p>
+						<p><a href="https://twitter.com/fernmuendlich">Twitter</a>, <a href="https://www.facebook.com/fernmuendlich">Facebook</a>, <a href="http://www.xing.com/profile/Maik_Wagner11">Xing</a>, <a href="http://de.linkedin.com/pub/maik-wagner/67/a19/9a8/">LinkedIn</a></p>	
+					</div>	
+				</div>
+			</div>	
 		</section>
--->
 		<!--
 		<section class="our-sponsors">
 			<div class="center">
