Sponsoren-Raster angelegt, erster Sponsor drinne

--- a/index.html
+++ b/index.html
@@ -172,22 +172,10 @@
 				</div>
 			</div>	
 		</section>
-		<!--
 		<section class="our-sponsors">
 			<div class="center">
-				<h2>OUR SPONSORS</h2>
-				<p>A Huge Thanks to All Our Amazing Agile Ruhr camp 2015 Sponsors!</p>
-				<div class="row sponsors">
-					<div class="col-sm-4 sponsor">
-						<a href="#"><img src="images/sponsors/spr1.png" alt=""></a>
-					</div>
-					<div class="col-sm-4 sponsor">
-						<a href="#"><img src="images/sponsors/spr2.png" alt=""></a>
-					</div>
-					<div class="col-sm-4 sponsor">
-						<a href="#"><img src="images/sponsors/spr3.png" alt=""></a>
-					</div>
-				</div>
+				<h2>UNSERE SPONSOREN</h2>
+				<p>Ein großes "Dankeschön" an unsere großartigen barcamp.ruhr 8 Sponsoren!</p>
 				<div class="row sponsors">
 					<div class="col-sm-4 sponsor">
 						<a href="#"><img src="images/sponsors/spr4.png" alt=""></a>
@@ -196,13 +184,26 @@
 						<a href="#"><img src="images/sponsors/spr5.png" alt=""></a>
 					</div>
 					<div class="col-sm-4 sponsor become-sponsor">
-						<a href="#"><span>BECOME A SPONSOR</span></a>
+						<a href="mailto:mail@barcamp.ruhr?subject=Premium-Sponsoring"><span>WERDE PREMIUM-SPONSOR</span></a>
+					</div>
+					<div class="row sponsors">
+						<div class="col-sm-3 sponsor">
+							<a href="http://www.bbk.bund.de"><img src="images/sponsors/spo_BBK.jpg" alt="Bundesamt für Bevölkerungsschutz und Katastrophenhilfe"></a>
+						</div>
+						<div class="col-sm-3 sponsor">
+							<a href="#"><img src="images/sponsors/spr5.png" alt=""></a>
+						</div>
+						<div class="col-sm-3 sponsor">
+							<a href="#"><img src="images/sponsors/spr5.png" alt=""></a>
+						</div>
+						<div class="col-sm-3 sponsor become-sponsor">
+							<a href="mailto:mail@barcamp.ruhr?subject=Basis-Sponsoring"><span>WERDE BASIS-SPONSOR</span></a>
+						</div>
 					</div>
 				</div>
 			</div>	
 		</section>
 	</div>
-	-->
 	<!-- /#main -->
 	<footer id="footer">
 		<div class="center">
