TocketBörse und Mitfahrbörse angelegt und in den FAQ verlinkt

--- a/index.html
+++ b/index.html
@@ -103,6 +103,14 @@
 						<dd id="f2" class="panel-collapse collapse">
 							Auch das ist Teil der Barcamp-Philosophie, das Barcamp soll für jeden zugänglich sein, unabhängig von den finanziellen Mitteln, der Austausch auf Augenhöhe steht im Vordergrund. Ziel ist, dass jeder Teilnehmer, auch wir Organisatoren, etwas lernt und mit nach Hause nimmt. Angefangen von Kontakten bis hin zu ganz konkreten Ideen.
 						</dd>
+						<dt><a data-toggle="collapse" data-parent="#faq" href="#f11">Ich kann doch nicht kommen, kann ich mein Ticket zurückgeben?</a></dt>
+						<dd id="f11" class="panel-collapse collapse">
+							Nein, eine Rückgabe des Tickets ist nicht vorgesehen, du kannst es aber an eine weitere Person weitergeben. Wir haben dafür eine <a href="https://docs.google.com/spreadsheets/d/1PrLeKV1RUnP8qvNbIv3fc1Fek1IzIKIOFsf4jDLkcho/edit?usp=sharing">Ticket-Tauschbörde</a> eingerichtet, trag dort einfach Dein Ticket ein.	Wenn es einen Nachfolger gibt, schreibe eine Mail mit den Daten des alten und des neuen Ticketbesitzers an <a href="mailto:mail@barcamp.ruhr">mail@barcamp-ruhr</a>, damit wir das Ticket umtragen können. 
+						</dd>
+						<dt><a data-toggle="collapse" data-parent="#faq" href="#f12">Ich habe noch Plätze im Auto frei / ich möchte nicht allein anreisen, wo kann man sich koordinieren?</a></dt>
+						<dd id="f12" class="panel-collapse collapse">
+							Wir habe ein offenes <a href="https://docs.google.com/spreadsheets/d/1zXKnJcfdRyspHXMAMRgGiLdiYH8VIoxyxu217rb7ckk/edit#gid=0">Google-Doc</a> eingerichtet, in das man seinen freien Plätze im Auto oder seine Zugverbindung eintragen kann, um Mitfahrer oder gemeinsame Zugfahrer zuu finden.							
+						</dd>
 						<dt><a data-toggle="collapse" data-parent="#faq" href="#f10">Es gibt Barcamp-Regeln?</a></dt>
 						<dd id="f10" class="panel-collapse collapse">
 							Ja, gibt es:
