ErdFisch als Sponsor eingetragen, Sponsorenbereich nach oben verschoben.

--- a/index.html
+++ b/index.html
@@ -80,6 +80,37 @@
 				</div>
 			</div>
 		</section>
+		<section class="our-sponsors">
+			<div class="center">
+				<h2>UNSERE SPONSOREN</h2>
+				<p>Ein großes "Dankeschön" an unsere großartigen barcamp.ruhr 8 Sponsoren!</p>
+				<div class="row sponsors">
+					<div class="col-sm-4 sponsor">
+						<a href="#"><img src="images/sponsors/spr4.png" alt=""></a>
+					</div>
+					<div class="col-sm-4 sponsor">
+						<a href="#"><img src="images/sponsors/spr5.png" alt=""></a>
+					</div>
+					<div class="col-sm-4 sponsor become-sponsor">
+						<a href="mailto:mail@barcamp.ruhr?subject=Premium-Sponsoring"><span>WERDE PREMIUM-SPONSOR</span></a>
+					</div>
+					<div class="row sponsors">
+						<div class="col-sm-3 sponsor">
+							<a href="http://www.bbk.bund.de"><img src="images/sponsors/spo_BBK.jpg" alt="Bundesamt für Bevölkerungsschutz und Katastrophenhilfe"></a>
+						</div>
+						<div class="col-sm-3 sponsor">
+							<a href="https://www.erdfisch.de/"><img src="images/sponsors/erdfisch_logo.jpg" alt=""></a>
+						</div>
+						<div class="col-sm-3 sponsor">
+							<a href="#"><img src="images/sponsors/spr5.png" alt=""></a>
+						</div>
+						<div class="col-sm-3 sponsor become-sponsor">
+							<a href="mailto:mail@barcamp.ruhr?subject=Basis-Sponsoring"><span>WERDE BASIS-SPONSOR</span></a>
+						</div>
+					</div>
+				</div>
+			</div>	
+		</section>
 		<section class="faq">
 			<div class="center clearfix">
 				<img src="images/faq.png" alt="">
@@ -177,37 +208,6 @@
 						</p>
 						<p><a href="https://twitter.com/fernmuendlich">Twitter</a>, <a href="https://www.facebook.com/fernmuendlich">Facebook</a>, <a href="http://www.xing.com/profile/Maik_Wagner11">Xing</a>, <a href="http://de.linkedin.com/pub/maik-wagner/67/a19/9a8/">LinkedIn</a></p>	
 					</div>	
-				</div>
-			</div>	
-		</section>
-		<section class="our-sponsors">
-			<div class="center">
-				<h2>UNSERE SPONSOREN</h2>
-				<p>Ein großes "Dankeschön" an unsere großartigen barcamp.ruhr 8 Sponsoren!</p>
-				<div class="row sponsors">
-					<div class="col-sm-4 sponsor">
-						<a href="#"><img src="images/sponsors/spr4.png" alt=""></a>
-					</div>
-					<div class="col-sm-4 sponsor">
-						<a href="#"><img src="images/sponsors/spr5.png" alt=""></a>
-					</div>
-					<div class="col-sm-4 sponsor become-sponsor">
-						<a href="mailto:mail@barcamp.ruhr?subject=Premium-Sponsoring"><span>WERDE PREMIUM-SPONSOR</span></a>
-					</div>
-					<div class="row sponsors">
-						<div class="col-sm-3 sponsor">
-							<a href="http://www.bbk.bund.de"><img src="images/sponsors/spo_BBK.jpg" alt="Bundesamt für Bevölkerungsschutz und Katastrophenhilfe"></a>
-						</div>
-						<div class="col-sm-3 sponsor">
-							<a href="#"><img src="images/sponsors/spr5.png" alt=""></a>
-						</div>
-						<div class="col-sm-3 sponsor">
-							<a href="#"><img src="images/sponsors/spr5.png" alt=""></a>
-						</div>
-						<div class="col-sm-3 sponsor become-sponsor">
-							<a href="mailto:mail@barcamp.ruhr?subject=Basis-Sponsoring"><span>WERDE BASIS-SPONSOR</span></a>
-						</div>
-					</div>
 				</div>
 			</div>	
 		</section>
