Tippfehler rau, Sponsorenaufforderung rein

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 					<div class="col-sm-4 sponsor">
 						<a href="#"><img src="images/sponsors/spr4.png" alt=""></a>
 					</div>
-					<div class="col-sm-4 sponsor">
-						<a href="#"><img src="images/sponsors/spr5.png" alt=""></a>
+					<div class="col-sm-4 sponsor become-sponsor">
+						<a href="mailto:mail@barcamp.ruhr?subject=Premium-Sponsoring"><span>WERDE PREMIUM-SPONSOR</span></a>
 					</div>
 					<div class="col-sm-4 sponsor become-sponsor">
 						<a href="mailto:mail@barcamp.ruhr?subject=Premium-Sponsoring"><span>WERDE PREMIUM-SPONSOR</span></a>
@@ -101,8 +101,8 @@
 						<div class="col-sm-3 sponsor">
 							<a href="https://www.erdfisch.de/"><img src="images/sponsors/erdfisch_logo.jpg" alt=""></a>
 						</div>
-						<div class="col-sm-3 sponsor">
-							<a href="#"><img src="images/sponsors/spr5.png" alt=""></a>
+						<div class="col-sm-3 sponsor become-sponsor">
+							<a href="mailto:mail@barcamp.ruhr?subject=Basis-Sponsoring"><span>WERDE BASIS-SPONSOR</span></a>
 						</div>
 						<div class="col-sm-3 sponsor become-sponsor">
 							<a href="mailto:mail@barcamp.ruhr?subject=Basis-Sponsoring"><span>WERDE BASIS-SPONSOR</span></a>
@@ -136,7 +136,7 @@
 						</dd>
 						<dt><a data-toggle="collapse" data-parent="#faq" href="#f11">Ich kann doch nicht kommen, kann ich mein Ticket zurückgeben?</a></dt>
 						<dd id="f11" class="panel-collapse collapse">
-							Nein, eine Rückgabe des Tickets ist nicht vorgesehen, du kannst es aber an eine weitere Person weitergeben. Wir haben dafür eine <a href="https://docs.google.com/spreadsheets/d/1PrLeKV1RUnP8qvNbIv3fc1Fek1IzIKIOFsf4jDLkcho/edit?usp=sharing">Ticket-Tauschbörde</a> eingerichtet, trag dort einfach Dein Ticket ein.	Wenn es einen Nachfolger gibt, schreibe eine Mail mit den Daten des alten und des neuen Ticketbesitzers an <a href="mailto:mail@barcamp.ruhr">mail@barcamp-ruhr</a>, damit wir das Ticket umtragen können. 
+							Nein, eine Rückgabe des Tickets ist nicht vorgesehen, du kannst es aber an eine weitere Person weitergeben. Wir haben dafür eine <a href="https://docs.google.com/spreadsheets/d/1PrLeKV1RUnP8qvNbIv3fc1Fek1IzIKIOFsf4jDLkcho/edit?usp=sharing">Ticket-Tauschbörse</a> eingerichtet, trag dort einfach Dein Ticket ein.	Wenn es einen Nachfolger gibt, schreibe eine Mail mit den Daten des alten und des neuen Ticketbesitzers an <a href="mailto:mail@barcamp.ruhr">mail@barcamp-ruhr</a>, damit wir das Ticket umtragen können. 
 						</dd>
 						<dt><a data-toggle="collapse" data-parent="#faq" href="#f12">Ich habe noch Plätze im Auto frei / ich möchte nicht allein anreisen, wo kann man sich koordinieren?</a></dt>
 						<dd id="f12" class="panel-collapse collapse">
