Dot-Ruhr und Agile-Camp als Sponsoren hinzugefügt

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<p>Ein großes "Dankeschön" an unsere großartigen barcamp.ruhr 8 Sponsoren!</p>
 				<div class="row sponsors">
 					<div class="col-sm-4 sponsor">
-						<a href="#"><img src="images/sponsors/spr4.png" alt=""></a>
+						<a href="http://www.dot.ruhr"><img src="images/sponsors/dot_ruhr.jpg" alt="Dot Ruhr"></a>
 					</div>
 					<div class="col-sm-4 sponsor become-sponsor">
 						<a href="mailto:mail@barcamp.ruhr?subject=Premium-Sponsoring"><span>WERDE PREMIUM-SPONSOR</span></a>
@@ -99,10 +99,10 @@
 							<a href="http://www.bbk.bund.de"><img src="images/sponsors/spo_BBK.jpg" alt="Bundesamt für Bevölkerungsschutz und Katastrophenhilfe"></a>
 						</div>
 						<div class="col-sm-3 sponsor">
-							<a href="https://www.erdfisch.de/"><img src="images/sponsors/erdfisch_logo.jpg" alt=""></a>
+							<a href="https://www.erdfisch.de/"><img src="images/sponsors/erdfisch_logo.jpg" alt="Erdfisch"></a>
 						</div>
-						<div class="col-sm-3 sponsor become-sponsor">
-							<a href="mailto:mail@barcamp.ruhr?subject=Basis-Sponsoring"><span>WERDE BASIS-SPONSOR</span></a>
+						<div class="col-sm-3 sponsor">
+							<a href="http://www.agile.ruhr"><img src="images/sponsors/agile_ruhr.jpg" alt="Erdfisch"></a>
 						</div>
 						<div class="col-sm-3 sponsor become-sponsor">
 							<a href="mailto:mail@barcamp.ruhr?subject=Basis-Sponsoring"><span>WERDE BASIS-SPONSOR</span></a>
