--- a/index.html
+++ b/index.html
@@ -24,6 +24,23 @@
 <div id="container">	
 	<header id="header">
 		<div class="center">
+			<nav class="navbar navbar-fixed-top" role="navigation">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div class="collapse navbar-collapse center">
+			  	<ul class="nav navbar-nav">
+			  		<li><a href="#catagories">Catagories</a></li>
+			  		<li><a href="#about-us">About Us</a></li>
+			  		<li><a href="#sponsors">Sponsors</a></li>
+			  	</ul>
+			  </div>
+			</nav> 
 			<img src="images/logo_small.png" alt="Barcamp Ruhr 8">
 			<h3><span>THINK GLOBAL - ACT LOCAL</span><br><span>UNPERFEKTHAUS ESSEN; 21./22. MÄRZ 2015<br>&nbsp; #bcruhr8 &nbsp;</span></h3>
 			<a href="#signup" class="btn btn-primary btn-red btn-red-small">Ticket kaufen</a>
