--- a/index.html
+++ b/index.html
@@ -24,6 +24,26 @@
 <div id="container">	
 	<header id="header">
 		<div class="center">
+			<nav class="navbar navbar-fixed-top" role="navigation">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div class="collapse navbar-collapse center">
+			  	<ul class="nav navbar-nav">
+			  		<li><a href="#signup">Tickets</a></li>
+			  		<li><a href="#mailing">Newsletter</a></li>
+			  		<li><a href="#catagories">Was erwartet mich?</a></li>
+			  		<li><a href="#sponsors">Sponsoren</a></li>
+			  		<li><a href="#faq">F.A.Q.</a></li>
+			  		<li><a href="#organizers">Organisatoren</a></li>
+			  	</ul>
+			  </div>
+			</nav> 		
 			<img src="images/logo_small.png" alt="Barcamp Ruhr 8">
 			<h3><span>THINK GLOBAL - ACT LOCAL</span><br><span>UNPERFEKTHAUS ESSEN; 21./22. MÄRZ 2015<br>&nbsp; #bcruhr8 &nbsp;</span></h3>
 			<a href="#signup" class="btn btn-primary btn-red btn-red-small">Ticket kaufen</a>
@@ -36,7 +56,7 @@
 				<h2>WEITERE TICKETS IN VORBEREITUNG</h2>
 				<div style="width:100%; text-align:left;" ><iframe  src="//eventbrite.com/tickets-external?eid=14800626071&ref=etckt" frameborder="0" height="368" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Online event registration</a><span style="color:#ddd;"> for </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="https://www.eventbrite.com/e/barcampruhr-8-tickets-14800626071?ref=etckt">barcamp.ruhr 8</a> <span style="color:#ddd;">powered by</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
 
-				<h2><img src="images/mailico.png" alt=""><br>JETZT BEI DER MAILINGLISTE ANMELDEN</h2>
+				<h2 id="mailing"><img src="images/mailico.png" alt=""><br>JETZT BEI DER MAILINGLISTE ANMELDEN</h2>
 				<h4>Wenn Ihr Euch in die Emailliste eintragt, informieren wir Euch regelmäßig über den Stand der Dinge und natürlich sofort, sobald der Ticketverkauf beginnt!</h4>
 				
 				
@@ -65,7 +85,7 @@
 			</div>
 		</section>
 		
-		<section class="know-about-us">
+		<section class="know-about-us" id="catagories">
 			<div class="center clearfix">
 				<img src="images/idea-thought.png" alt="">
 				<div class="text">
@@ -80,7 +100,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="our-sponsors">
+		<section class="our-sponsors" id="sponsors">
 			<div class="center">
 				<h2>UNSERE SPONSOREN</h2>
 				<p>Ein großes "Dankeschön" an unsere großartigen barcamp.ruhr 8 Sponsoren!</p>
@@ -179,7 +199,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="organizers">
+		<section class="organizers" id="organizers">
 			<div class="center clearfix">
 				<div class="clearfix">
 					<div class="text">
