Sponsoren um sparhandy, rheinschafe, invision ergänzt

--- a/index.html
+++ b/index.html
@@ -122,12 +122,27 @@
 							<a href="https://www.erdfisch.de/"><img src="images/sponsors/erdfisch_logo.jpg" alt="Erdfisch"></a>
 						</div>
 						<div class="col-sm-3 sponsor">
-							<a href="http://www.agile.ruhr"><img src="images/sponsors/agile_ruhr.jpg" alt="Erdfisch"></a>
+							<a href="http://www.agile.ruhr"><img src="images/sponsors/agile_ruhr.jpg" alt="Agile Ruhr"></a>
+						</div>
+						<div class="col-sm-3 sponsor">
+							<a href="http://www.sparhandy.de"><img src="images/sponsors/sparhandy.jpg" alt="Sparhandy"></a>
+						</div>
+					</div>
+					<div class="row sponsors">
+						<div class="col-sm-3 sponsor">
+							<a href="http://www.rheinschafe.de"><img src="images/sponsors/rheinschafe.jpg" alt="Rheinschafe"></a>
+						</div>
+						<div class="col-sm-3 sponsor">
+							<a href="http://www.invision.de"><img src="images/sponsors/invision.jpg" alt="Invision"></a>
+						</div>
+						<div class="col-sm-3 sponsor become-sponsor">
+							<a href="mailto:mail@barcamp.ruhr?subject=Basis-Sponsoring"><span>WERDE BASIS-SPONSOR</span></a>
 						</div>
 						<div class="col-sm-3 sponsor become-sponsor">
 							<a href="mailto:mail@barcamp.ruhr?subject=Basis-Sponsoring"><span>WERDE BASIS-SPONSOR</span></a>
 						</div>
 					</div>
+
 				</div>
 			</div>	
 		</section>
