KKK und 9elements als Sponsor hinzugefügt

--- a/index.html
+++ b/index.html
@@ -135,6 +135,20 @@
 						<div class="col-sm-3 sponsor">
 							<a href="http://www.invision.de"><img src="images/sponsors/invision.jpg" alt="Invision"></a>
 						</div>
+						<div class="col-sm-3 sponsor">
+							<a href="http://www.kreativekommunikationskonzepte.de/"><img src="images/sponsors/k3_ruhr.jpg" alt="Kreative Kommunikationskonzepte"></a>
+						</div>
+						<div class="col-sm-3 sponsor">
+							<a href="http://9elements.com/"><img src="images/sponsors/9elements.jpg" alt="9 Elements"></a>
+						</div>
+					</div>
+					<div class="row sponsors">
+						<div class="col-sm-3 sponsor become-sponsor">
+							<a href="mailto:mail@barcamp.ruhr?subject=Basis-Sponsoring"><span>WERDE BASIS-SPONSOR</span></a>
+						</div>
+						<div class="col-sm-3 sponsor become-sponsor">
+							<a href="mailto:mail@barcamp.ruhr?subject=Basis-Sponsoring"><span>WERDE BASIS-SPONSOR</span></a>
+						</div>
 						<div class="col-sm-3 sponsor become-sponsor">
 							<a href="mailto:mail@barcamp.ruhr?subject=Basis-Sponsoring"><span>WERDE BASIS-SPONSOR</span></a>
 						</div>
@@ -142,7 +156,6 @@
 							<a href="mailto:mail@barcamp.ruhr?subject=Basis-Sponsoring"><span>WERDE BASIS-SPONSOR</span></a>
 						</div>
 					</div>
-
 				</div>
 			</div>	
 		</section>
