--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<div id="main">
 		<a name="signup"><section class="speaking-categories"></a>
 			<div class="center">
-				<h2>WEITERE TICKETS IN VORBEREITUNG</h2>
+				<h2>ZUSÄTZLICHE TICKETS AB 05. MÄRZ, 18:00 UHR</h2>
 				<div style="width:100%; text-align:left;" ><iframe  src="//eventbrite.com/tickets-external?eid=14800626071&ref=etckt" frameborder="0" height="368" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Online event registration</a><span style="color:#ddd;"> for </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="https://www.eventbrite.com/e/barcampruhr-8-tickets-14800626071?ref=etckt">barcamp.ruhr 8</a> <span style="color:#ddd;">powered by</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
 
 				<h2 id="mailing"><img src="images/mailico.png" alt=""><br>JETZT BEI DER MAILINGLISTE ANMELDEN</h2>
