Sipgate als Premium-Sponsor eingetragen

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 					<div class="col-sm-4 sponsor become-sponsor">
 						<a href="mailto:mail@barcamp.ruhr?subject=Premium-Sponsoring"><span>WERDE PREMIUM-SPONSOR</span></a>
 					</div>
-					<div class="col-sm-4 sponsor become-sponsor">
-						<a href="mailto:mail@barcamp.ruhr?subject=Premium-Sponsoring"><span>WERDE PREMIUM-SPONSOR</span></a>
+					<div class="col-sm-4 sponsor">
+						<a href="http://www.sipgate.de"><img src="images/sponsors/sipgate.jpg" alt="sipgate.io"/></a>
 					</div>
 					<div class="row sponsors">
 						<div class="col-sm-3 sponsor">
