Link bei sparhandy geändert.

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 							<a href="http://www.agile.ruhr"><img src="images/sponsors/agile_ruhr.jpg" alt="Agile Ruhr"></a>
 						</div>
 						<div class="col-sm-3 sponsor">
-							<a href="http://www.sparhandy.de"><img src="images/sponsors/sparhandy.jpg" alt="Sparhandy"></a>
+							<a href="https://www.sparhandy-gmbh.de"><img src="images/sponsors/sparhandy.jpg" alt="Sparhandy"></a>
 						</div>
 					</div>
 					<div class="row sponsors">
