REWE als Premium-Sponsor eingetragen, werde Sponsor weggemacht.

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 					<div class="col-sm-4 sponsor">
 						<a href="http://www.dot.ruhr"><img src="images/sponsors/dot_ruhr.jpg" alt="Dot Ruhr"></a>
 					</div>
-					<div class="col-sm-4 sponsor become-sponsor">
-						<a href="mailto:mail@barcamp.ruhr?subject=Premium-Sponsoring"><span>WERDE PREMIUM-SPONSOR</span></a>
+					<div class="col-sm-4 sponsor">
+						<a href="http://www.rewe-group.com/"><img src="images/sponsors/rewedigital.jpg" alt="REWE digital"></a>
 					</div>
 					<div class="col-sm-4 sponsor">
 						<a href="http://www.sipgate.de"><img src="images/sponsors/sipgate.jpg" alt="sipgate.io"/></a>
@@ -143,15 +143,6 @@
 						</div>
 					</div>
 					<div class="row sponsors">
-						<div class="col-sm-3 sponsor become-sponsor">
-							<a href="mailto:mail@barcamp.ruhr?subject=Basis-Sponsoring"><span>WERDE BASIS-SPONSOR</span></a>
-						</div>
-						<div class="col-sm-3 sponsor become-sponsor">
-							<a href="mailto:mail@barcamp.ruhr?subject=Basis-Sponsoring"><span>WERDE BASIS-SPONSOR</span></a>
-						</div>
-						<div class="col-sm-3 sponsor become-sponsor">
-							<a href="mailto:mail@barcamp.ruhr?subject=Basis-Sponsoring"><span>WERDE BASIS-SPONSOR</span></a>
-						</div>
 						<div class="col-sm-3 sponsor become-sponsor">
 							<a href="mailto:mail@barcamp.ruhr?subject=Basis-Sponsoring"><span>WERDE BASIS-SPONSOR</span></a>
 						</div>
