Achtung als Sponsor eingetragen

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 						</div>
 					</div>
 					<div class="row sponsors">
-						<div class="col-sm-3 sponsor become-sponsor">
-							<a href="mailto:mail@barcamp.ruhr?subject=Basis-Sponsoring"><span>WERDE BASIS-SPONSOR</span></a>
+						<div class="col-sm-3 sponsor">
+							<a href="http://www.achtung.de/thelab/"><img src="images/sponsors/achtung_lab.jpg" alt="achtung! lab" /></a>
 						</div>
 					</div>
 				</div>
