Archiv der Newsletter hinzugefügt

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 			  		<li><a href="#catagories">Was erwartet mich?</a></li>
 			  		<li><a href="#sponsors">Sponsoren</a></li>
 			  		<li><a href="#faq">F.A.Q.</a></li>
+			  		<li><a href="#archiv">Archiv</a></li>
 			  		<li><a href="#organizers">Organisatoren</a></li>
 			  	</ul>
 			  </div>
@@ -214,6 +215,25 @@
 						</dd>
 					</dl>
 					<p>Kurz gesagt: <strong>Barcamp ist das, was du daraus machst!</strong></p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="archiv" id="archiv">
+			<div class="center clearfix">
+				<img src="images/faq.png" alt="">
+				<div id="faq">
+					<div class="text">
+					<h2>ARCHIV</h2>
+					<p>Was bisher geschah, die Sammlung all unserer Newsletter</p>
+					<ul>
+						<li>09: März 2015: <a href="http://us9.campaign-archive1.com/?u=2d4471423d9d63e0ec75deedb&id=acba6268c0&e=a3c3067539" target="_blank">Wir legen ein kleines Ticket-Kontingent nach</a></li>
+						<li>02. März 2015: <a href="http://us9.campaign-archive1.com/?u=2d4471423d9d63e0ec75deedb&id=27eb860271&e=a3c3067539" target="_blank">Die nächste Ticketwelle kommt diese Woche</a></li>
+						<li>12. Februar 2015: <a href="http://us9.campaign-archive2.com/?u=2d4471423d9d63e0ec75deedb&id=56914fa224&e=a3c3067539" target="_blank">Sponsorensuche und Unterstützertickets</a></li>
+						<li>26. Januar 2015: <a href="http://us9.campaign-archive2.com/?u=2d4471423d9d63e0ec75deedb&id=4cdeba884b&e=a3c3067539" target="_blank"> Erste Welle Tickets direkt ausverkauft, Sponsorensuche, Organisatorisches</a></li>
+						<li>08. Januar 2015: <a href="http://us9.campaign-archive1.com/?u=2d4471423d9d63e0ec75deedb&id=dbaf040f01&e=a3c3067539" target="_blank"> Die erste Ticketwelle geht diesen Donnerstag live</a></li>
+						<li>18. Dezember 2014: <a href="http://us9.campaign-archive2.com/?u=2d4471423d9d63e0ec75deedb&id=08c0079ab4&e=a3c3067539" target="_blank"> Erste Infos zu den Tickets, Sponsoren und natürlich Weihnachten</a></li>
+					</ul>
 					</div>
 				</div>
 			</div>
