Icon für's Archiv ausgetauscht

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 				</div>
 			</div>
 		</section>
+
 		<section class="our-sponsors" id="sponsors">
 			<div class="center">
 				<h2>UNSERE SPONSOREN</h2>
@@ -221,7 +222,7 @@
 		</section>
 		<section class="archiv" id="archiv">
 			<div class="center clearfix">
-				<img src="images/faq.png" alt="">
+				<img src="images/mailico.png" alt="">
 				<div id="faq">
 					<div class="text">
 					<h2>ARCHIV</h2>
