--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 			  	<ul class="nav navbar-nav">
 			  		<li><a href="#signup">Tickets</a></li>
 			  		<li><a href="#mailing">Newsletter</a></li>
-			  		<li><a href="#catagories">Was erwartet mich?</a></li>
+			  		<li><a href="#categories">Was erwartet mich?</a></li>
+			  		<li><a href="#agenda">Agenda</a></li>
 			  		<li><a href="#sponsors">Sponsoren</a></li>
 			  		<li><a href="#faq">F.A.Q.</a></li>
 			  		<li><a href="#archiv">Archiv</a></li>
@@ -86,7 +87,7 @@
 			</div>
 		</section>
 		
-		<section class="know-about-us" id="catagories">
+		<section class="know-about-us" id="categories">
 			<div class="center clearfix">
 				<img src="images/idea-thought.png" alt="">
 				<div class="text">
@@ -98,6 +99,27 @@
 					<p>Berthold (<a href="https://twitter.com/bertholdb">@bertholdb</a>) und Maik (<a href="https://twitter.com/fernmuendlich">@fernmuendlich</a>)</p>
 					<p>PS: Wir suchen natürlich auch dieses Jahr Sponsoren und Partner. Bei diesen und allen anderen Anliegen gerne eine Email an <a href="mailto:mail@barcamp.ruhr" target="_top">mail@barcamp.ruhr</a>.<br><br></p>
 
+				</div>
+			</div>
+		</section>
+		<section class="agenda" id="agenda">
+			<div class="center clearfix">
+				<div class="text">
+					<h2>AGENDA</h2>
+					<h3>Samstag, 21.03.2015</h3>
+					<table class="table table-striped">
+						<tr><td class="td-time">ab 9h </td><td>Ankommen, Frühstück &amp; Registrierung</td></tr>
+						<tr><td class="td-time">10h - 11h</td><td>Vorstellungsrunde &amp; Sessionplanung</td></tr>
+						<tr><td class="td-time">11h - 18h</td><td>Sessions</td></tr>
+						<tr><td class="td-time">ab 18h</td><td><a href="https://www.facebook.com/events/737170586381732/?ref=3&ref_newsfeed_story_type=regular&source=3&source_newsfeed_story_type=regular">Abendveranstaltung im  Restaurant Artemis</a></td></tr>
+					</table>
+					<h3>Sonntag, 22. März 2015</h3>
+					<table class="table table-striped">
+						<tr><td class="td-time">ab 9h </td><td>Ankommen, Frühstück &amp; Registrierung</td></tr>
+						<tr><td class="td-time">10h - 11h</td><td>Sessionplanung</td></tr>
+						<tr><td class="td-time">11h - 16h</td><td>Sessions</td></tr>
+						<tr><td class="td-time">16h</td><td>Abschluss-Session, im Anschluss gemeinsames Aufräumen</td></tr>
+					</table>
 				</div>
 			</div>
 		</section>
