Archiv um Blog-Artikel ergänzt.

--- a/index.html
+++ b/index.html
@@ -251,12 +251,16 @@
 					<p>Was bisher geschah, die Sammlung all unserer Newsletter</p>
 					<ul>
 						<li>19.März 2015: <a href="http://us9.campaign-archive1.com/?u=2d4471423d9d63e0ec75deedb&id=cb0ae1cbd1&e=a3c3067539">#TeamEndspurt informiert</a></li>
+						<li>17. März 2015: <a href="http://berthold-barth.de/unser-dritter-premium-sponsor-beim-barcamp-ruhr-sipgate-io/" target="_blank">Unser dritter Premium Sponsor beim barcamp.ruhr: sipgate.io</a></li>
+						<li>11. März 2015: <a href="http://berthold-barth.de/rewe-digital-sind-premium-sponsor-des-barcamp-ruhr-8/" target="_blank">REWE Digital sind Premium Sponsor des barcamp.ruhr 8</a></li>
 						<li>09: März 2015: <a href="http://us9.campaign-archive1.com/?u=2d4471423d9d63e0ec75deedb&id=acba6268c0&e=a3c3067539" target="_blank">Wir legen ein kleines Ticket-Kontingent nach</a></li>
 						<li>02. März 2015: <a href="http://us9.campaign-archive1.com/?u=2d4471423d9d63e0ec75deedb&id=27eb860271&e=a3c3067539" target="_blank">Die nächste Ticketwelle kommt diese Woche</a></li>
+						<li>27. Februar 2015: <a href="http://berthold-barth.de/ruhr-und-global-village-sind-erster-premium-sponsor-des-barcamp-ruhr-8/" target="_blank">.ruhr und Global Village sind erster Premium Sponsor des barcamp.ruhr 8</a></li>
 						<li>12. Februar 2015: <a href="http://us9.campaign-archive2.com/?u=2d4471423d9d63e0ec75deedb&id=56914fa224&e=a3c3067539" target="_blank">Sponsorensuche und Unterstützertickets</a></li>
 						<li>26. Januar 2015: <a href="http://us9.campaign-archive2.com/?u=2d4471423d9d63e0ec75deedb&id=4cdeba884b&e=a3c3067539" target="_blank"> Erste Welle Tickets direkt ausverkauft, Sponsorensuche, Organisatorisches</a></li>
 						<li>08. Januar 2015: <a href="http://us9.campaign-archive1.com/?u=2d4471423d9d63e0ec75deedb&id=dbaf040f01&e=a3c3067539" target="_blank"> Die erste Ticketwelle geht diesen Donnerstag live</a></li>
 						<li>18. Dezember 2014: <a href="http://us9.campaign-archive2.com/?u=2d4471423d9d63e0ec75deedb&id=08c0079ab4&e=a3c3067539" target="_blank"> Erste Infos zu den Tickets, Sponsoren und natürlich Weihnachten</a></li>
+						<li>05. November 2014: <a href="http://berthold-barth.de/herzlich-willkommen-barcamp-ruhr/" target="_blank">Herzlich Willkommen barcamp.ruhr</a></li>
 					</ul>
 					</div>
 				</div>
