--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<section class="speaking-categories">
 			<div class="center">
 				<h2>SESSION-BOARD</h2>
-				<iframe width="1100" height="650" src="https://docs.google.com/spreadsheets/d/14RnMGDaI4cBFJiuOPFN431tTcE1N5lCU5Te5fQhhVgg/pubhtml?widget=true&amp;headers=false"></iframe>" />
+				<iframe width="1100" height="650" src="https://docs.google.com/spreadsheets/d/14RnMGDaI4cBFJiuOPFN431tTcE1N5lCU5Te5fQhhVgg/pubhtml?widget=true&amp;headers=false"></iframe>
 			</div>
 		</section>
 		<a name="signup"><section class="speaking-categories"></a>
