Session-Board ins Menü eingetragen

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 				</div>
 				<div class="collapse navbar-collapse center">
 			  	<ul class="nav navbar-nav">
+			  		<li><a href="#board">Session-Board</a></li>
 			  		<li><a href="#signup">Tickets</a></li>
 			  		<li><a href="#mailing">Newsletter</a></li>
 			  		<li><a href="#categories">Was erwartet mich?</a></li>
@@ -53,7 +54,7 @@
 	</header>
 	<!-- /#header -->
 	<div id="main">
-		<section class="speaking-categories">
+		<section class="speaking-categories" id="board">
 			<div class="center">
 				<h2>SESSION-BOARD</h2>
 				<iframe width="1100" height="650" src="https://docs.google.com/spreadsheets/d/14RnMGDaI4cBFJiuOPFN431tTcE1N5lCU5Te5fQhhVgg/pubhtml?widget=true&amp;headers=false"></iframe>
