Sponsoren-Links überarbeitet

--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
 						<a href="http://www.dot.ruhr"><img src="images/sponsors/dot_ruhr.jpg" alt="Dot Ruhr"></a>
 					</div>
 					<div class="col-sm-4 sponsor">
-						<a href="http://www.rewe-group.com/"><img src="images/sponsors/rewedigital.jpg" alt="REWE digital"></a>
+						<a href="https://rewe-digital.dvinci.de/jobPublication/list/"><img src="images/sponsors/rewedigital.jpg" alt="REWE digital"></a>
 					</div>
 					<div class="col-sm-4 sponsor">
-						<a href="http://www.sipgate.de"><img src="images/sponsors/sipgate.jpg" alt="sipgate.io"/></a>
+						<a href="https://demo.sipgate.io/"><img src="images/sponsors/sipgate.jpg" alt="sipgate.io"/></a>
 					</div>
 					<div class="row sponsors">
 						<div class="col-sm-3 sponsor">
