Artikel Martina Rüter nachgetragen

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 					<li><a href="http://www.gourmetgeeks.de/honig-do-it-yourself/">Honig – Do It Yourself…</a>
 					<li><a href="http://www.dot.ruhr/de/news/detail/erfahrungsbericht-ruhr-goes-barcamp-ruhr/">Erfahrungsbericht: .ruhr goes BarCamp Ruhr</a></li>
 					<li><a href="http://blog.netpress.de/netpress-auf-dem-barcamp-ruhr8-in-essen">NetPress auf dem Barcamp Ruhr8 in Essen</a></li>
+					<li><a href="http://www.martina-rüter.de/lernen-elearing/barcamps-inspiration-austausch-und-lernort/">Barcamps: Inspiration, Austausch und Lernort</a></li>
 					<li><a href="https://www.flickr.com/photos/simsullen/sets/72157651457844746/">Ein paar Fotos von @simsullen</a></li>
 					<li>Kommentar in eigener Sache: <a href="http://berthold-barth.de/danke-barcamp-ruhr-8/">Danke barcamp.ruhr 8</a></li>
 				</ul>
