--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
 					<li><a href="http://www.dot.ruhr/de/news/detail/erfahrungsbericht-ruhr-goes-barcamp-ruhr/">Erfahrungsbericht: .ruhr goes BarCamp Ruhr</a></li>
 					<li><a href="http://blog.netpress.de/netpress-auf-dem-barcamp-ruhr8-in-essen">NetPress auf dem Barcamp Ruhr8 in Essen</a></li>
 					<li><a href="http://www.martina-rüter.de/lernen-elearing/barcamps-inspiration-austausch-und-lernort/">Barcamps: Inspiration, Austausch und Lernort</a></li>
+					<li><a href="http://jens.ruhr/barcamp-ruhr-8-danke-fuer-eine-tolle-veranstaltung-bcruhr8/504/">BarCamp Ruhr 8: Danke für eine tolle Veranstaltung! #bcruhr8</a></li>
+					<li><a href="http://walkaboutmedia.de/barcamp-ruhr-8-von-vpa-bis-bevoelkerungsschutz/">BarCamp Ruhr 8 – Von VPA bis Bevölkerungsschutz</a></li>
 					<li><a href="https://www.flickr.com/photos/simsullen/sets/72157651457844746/">Ein paar Fotos von @simsullen</a></li>
 					<li>Kommentar in eigener Sache: <a href="http://berthold-barth.de/danke-barcamp-ruhr-8/">Danke barcamp.ruhr 8</a></li>
 				</ul>
