--- a/bcruhr12/index.html
+++ b/bcruhr12/index.html
@@ -85,6 +85,39 @@
                         </figure>
                     </div>
                 </section>
+                <section >
+                    <h2>Kontakt</h2>
+                    <div class="kontakt">
+                        <div>
+                            <h3 id="location">Location</h3>
+                            <p>Unperfekthaus Essen<br />
+                               Friedrich-Ebert-Str. 18<br />
+                               45127 Essen 
+                            </p>
+                        </div>
+                        <div>
+                            <h3 id="newsletter">Newsletter</h3>
+                            <p>Wenn Ihr Euch in die Emailliste eintragt, informieren wir Euch regelmäßig über den Stand der Dinge und natürlich sofort, sobald der Ticketverkauf beginnt!</p>
+                            <!-- Begin MailChimp Signup Form -->
+                                <!--<div id="mc_embed_signup">-->
+                                    <form action="//agileruhrcamp.us9.list-manage.com/subscribe/post?u=2d4471423d9d63e0ec75deedb&amp;id=a29e912984" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                                        
+                                          <label for="mce-EMAIL">Email-Addresse:</label><br />
+                                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                                            <div class="response" id="mce-error-response" style="display:none"></div>
+                                            <div class="response" id="mce-success-response" style="display:none"></div>
+                                           <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                            <div style="position: absolute; left: -5000px;"><input type="text" name="b_2d4471423d9d63e0ec75deedb_36dc7b2b45" tabindex="-1" value=""></div>
+                                        <input type="submit" value="Newsletter bestellen" name="subscribe" id="mc-embedded-subscribe" class="button">
+                                    </form>
+                                    <p class="hinweis">Zur Erfüllung dieses Verteilers verwenden wir Mailchimp, dessen Privacy Policy Ihr <a href="http://mailchimp.com/legal/privacy/">hier</a> einsehen könnt. Euer Emails werden von uns ausschliesslich zur Information um und über das barcamp.ruhr 12 genutzt und nicht an Dritte weitergegeben.</p>
+                                <!--</div>-->
+                            <!--End mc_embed_signup-->
+                            </p>
+                        </div>
+                    </div>
+                </section>
+
             </main>
             <footer>
                 <ul>
