Tippfehler, wie immer.

--- a/bcruhr12/index.html
+++ b/bcruhr12/index.html
@@ -8,7 +8,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="manifest" href="site.webmanifest">
-        <link rel="apple-touch-icon" href="icon.png">
         <!-- Place favicon.ico in the root directory -->
 
 <!--        <link rel="stylesheet" href="assets/css/normalize.css"> -->
@@ -135,7 +134,7 @@
                     </li>
                     <li>
                         <div class="person">
-                            <div class="foto"><img src="assets/images/Maik.png" alt="Portrait"></div>
+                            <div class="foto"><img src="assets/images/maik.png" alt="Portrait"></div>
                             <div class="name">Maik Wagner</div>
                             <div class="sm">
                                 <a href="https://twitter.com/fernmuendlich">Twitter,</a>
