--- a/bcruhr12/index.html
+++ b/bcruhr12/index.html
@@ -34,7 +34,7 @@
             </header>
             <main>
                 <div id="subline">
-                    <h1>24.25. März 2019 - UNPERFEKTHAUS ESSEN- #bcruhr12</h1>
+                    <h1>23.-24. März 2019 - UNPERFEKTHAUS ESSEN- #bcruhr12</h1>
                 </div>
                 <section>
                     <h2>Unsere Sponsoren</h2>
@@ -110,7 +110,7 @@
                                             <div style="position: absolute; left: -5000px;"><input type="text" name="b_2d4471423d9d63e0ec75deedb_36dc7b2b45" tabindex="-1" value=""></div>
                                         <input type="submit" value="Newsletter bestellen" name="subscribe" id="mc-embedded-subscribe" class="button">
                                     </form>
-                                    <p class="hinweis">Zur Erfüllung dieses Verteilers verwenden wir Mailchimp, dessen Privacy Policy Ihr <a href="http://mailchimp.com/legal/privacy/">hier</a> einsehen könnt. Euer Emails werden von uns ausschliesslich zur Information um und über das barcamp.ruhr 12 genutzt und nicht an Dritte weitergegeben.</p>
+                                    <p class="hinweis">Zur Erfüllung dieses Verteilers verwenden wir Mailchimp, dessen Privacy Policy Ihr <a href="https://mailchimp.com/legal/privacy/">hier</a> einsehen könnt. Euer Emails werden von uns ausschliesslich zur Information um und über das barcamp.ruhr 12 genutzt und nicht an Dritte weitergegeben.</p>
                                 <!--</div>-->
                             <!--End mc_embed_signup-->
                             </p>
@@ -128,7 +128,7 @@
                                 <a href="https://twitter.com/bertholdb">Twitter,</a>
                                 <a href="https://www.facebook.com/berthold.barth">Facebook,</a>
                                 <a href="https://www.xing.com/profile/Berthold_Barth">Xing,</a>
-                                <a href="http://de.linkedin.com/pub/berthold-barth/56/a14/b91/de">LinkedIn,</a>
+                                <a href="https://de.linkedin.com/pub/berthold-barth/56/a14/b91/de">LinkedIn,</a>
                             </div>
                         </div>
                     </li>
@@ -139,8 +139,8 @@
                             <div class="sm">
                                 <a href="https://twitter.com/fernmuendlich">Twitter,</a>
                                 <a href="https://www.facebook.com/fernmuendlich">Facebook,</a>
-                                <a href="http://www.xing.com/profile/Maik_Wagner11">Xing,</a>
-                                <a href="http://de.linkedin.com/pub/maik-wagner/67/a19/9a8/">LinkedIn,</a>
+                                <a href="https://www.xing.com/profile/Maik_Wagner11">Xing,</a>
+                                <a href="https://de.linkedin.com/pub/maik-wagner/67/a19/9a8/">LinkedIn,</a>
                             </div>
                         </div>
                     </li>
